--- a/style.css
+++ b/style.css
@@ -125,7 +125,8 @@ h4 {
   font-weight: normal;
 }
 .col-4 p {
-  font-size: 14px;
+  font-size: 12px;
+  color: #ff523b;
 }
 .col-4:hover {
   transform: translateY(-5px);
@@ -283,8 +284,8 @@ select {
 }
 .single-product h4 {
   font-size: 22px;
-  font-weight: bold;
   margin: 20px 0;
+  color: #ff523b;
 }
 .single-product select {
   display: block;
@@ -306,6 +307,58 @@ select {
 .small-img-col {
   flex-basis: 23%;
   cursor: pointer;
+}
+
+/*------ Cart items ------*/
+.cart-page {
+  margin: 80px auto;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.cart-info {
+  display: flex;
+  flex-wrap: wrap;
+}
+th {
+  text-align: left;
+  padding: 5px;
+  color: white;
+  background: #ff523b;
+  font-weight: normal;
+}
+td {
+  padding: 10px 5px;
+}
+td input {
+  width: 40px;
+  height: 30px;
+  padding: 5px;
+}
+td a {
+  color: #ff523b;
+  font-size: 12px;
+}
+td img {
+  width: 80px;
+  height: 80px;
+  margin-right: 10px;
+}
+.total-price {
+  display: flex;
+  justify-content: flex-end;
+}
+.total-price table {
+  border-top: 3px solid #ff523b;
+  width: 100%;
+  max-width: 400px;
+}
+td:last-child {
+  text-align: right;
+}
+th:last-child {
+  text-align: right;
 }
 /*------ media query for menu ------*/
 @media only screen and (max-width: 800px) {
@@ -350,5 +403,8 @@ select {
   .single-product h1 {
     font-size: 26px;
     line-height: 26px;
+  }
+  .cart-info {
+    display: none;
   }
 }
